--- a/header_usuario.html
+++ b/header_usuario.html
@@ -24,8 +24,17 @@
         <!-- El contenido se inyecta dinámicamente -->
       </div>
     </div>    
-    <!-- Botón de Iniciar Sesión -->
-    <a href="login.html" id="loginLink" class="login-btn" title="Iniciar sesión">Iniciar sesión</a>
+    <!-- Perfil de usuario con dropdown -->
+    <div class="profile-container" id="profileContainer">
+      <img src="assets/images/profile.png" alt="Perfil" class="profile-icon" id="profileIcon" />
+      <div class="profile-dropdown" id="profileDropdown">
+        <a href="edit_perfil.html">Editar perfil</a>
+        <a href="favoritos.html">Lista de Me gusta</a>
+        <a href="mis_compras.html">Mis compras</a>
+        <a href="amigos.html">Gestionar amigos</a>
+        <a href="index.html" class="logout-link">Cerrar sesión</a>
+      </div>
+    </div>
   </div>
 </header>
 
