--- a/login.html
+++ b/login.html
@@ -8,20 +8,24 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <!-- Inyección del header -->
-    <div id="header-placeholder"></div>
-    <script>
+  <!-- Inyección del header -->
+  <div id="header-placeholder"></div>
+  
+  <!-- Script para cargar header y ejecutar funciones dependientes -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
       fetch('header.html')
         .then(response => response.text())
         .then(data => {
           document.getElementById('header-placeholder').innerHTML = data;
           // Después de cargar el header, inicializamos el carrito
-          setTimeout(() => {
-            updateCartCount();
-            updateCartDropdown();
-          }, 100);
-        });
-    </script>
+          updateCartCount();
+          updateCartDropdown();
+        })
+        .catch(error => console.error('Error al cargar el header:', error));
+    });
+  </script>
+  
   <!-- Contenido principal: Iniciar sesión -->
   <main class="content login-page">
     <h2 class="logo">Iniciar Sesión</h2>
@@ -31,11 +35,8 @@
 
       <label for="password">Contraseña:</label>
       <input type="password" id="password" name="password" required>
-      <!-- Elemento para mostrar error de contraseña -->
       <span id="passwordError" style="color: red;"></span>
-
       <button type="submit" class="btn">Iniciar sesión</button>
-      
     </form>
     <div class="login-options">
       <p>¿No tienes cuenta? <a href="register.html">Regístrate</a></p>
@@ -50,6 +51,30 @@
   <footer>
     <p>&copy; 2025 UnderSounds. Todos los derechos reservados.</p>
   </footer>
+
+  <script>
+    document.getElementById('loginForm').addEventListener('submit', function(event) {
+      event.preventDefault();
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
+      const savedUser = JSON.parse(localStorage.getItem('user'));
+
+      if (savedUser && (savedUser.username === username || savedUser.email === username) && savedUser.password === password) {
+        // Dependiendo del campo type, se redirige a una página u otra.
+        if (savedUser.type === 'artist') {
+          window.location.href = 'index_artista.html';
+        } else if (savedUser.type === 'sello') {
+          window.location.href = 'index_sello.html';
+        } else {
+          window.location.href = 'index_usuario.html';
+        }
+      } else {
+        document.getElementById('passwordError').textContent = 'Usuario o contraseña incorrectos.';
+        document.getElementById('username').value = '';
+        document.getElementById('password').value = '';
+      }
+    });
+  </script>
 
   <script src="js/main.js"></script>
 </body>
