Subir album y gestion_sello

--- a/header_sello.html
+++ b/header_sello.html
@@ -31,7 +31,7 @@
           <a href="edit_perfil_sello.html">Editar perfil</a>
           <a href="favoritos.html">Lista de Me gusta</a>
           <a href="mis_compras.html">Mis compras</a>
-          <a href="albumes_subidos">Albumes subidos</a>
+          <a href="albumes_subidos.html">Albumes subidos</a>
           <a href="amigos.html">Gestionar amigos</a>
           <a href="index.html" class="logout-link">Cerrar sesión</a>
         </div>
