Cambios en el footer en todas las páginas, se agregó un footer de manera dinámica

--- a/gestion_sello.html
+++ b/gestion_sello.html
@@ -192,12 +192,25 @@
     });
   </script>
 
+  <!-- Contenedor para insertar el footer dinámicamente -->
+  <div id="footer"></div>
 
+  <!-- Script para cargar footer.html -->
+  <script>
+    // Esta función "fetch" trae el contenido de footer.html
+    // y lo inyecta dentro del div con id="footer"
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('footer').innerHTML = data;
+      })
+      .catch(error => {
+        console.error('Error al cargar el footer:', error);
+      });
+  </script>
 
 </main>
 
 </body>
-<footer>
-  <p>&copy; 2025 UnderSounds. Todos los derechos reservados.</p>
-</footer>
+
 </html>
