--- a/artistas.html
+++ b/artistas.html
@@ -91,10 +91,22 @@
   <!-- Botón de Ayuda Flotante -->
   <a href="ayuda.html" class="help-button" title="Ayuda">?</a>
 
-  <!-- Footer común -->
-  <footer>
-    <p>&copy; 2025 UnderSounds. Todos los derechos reservados.</p>
-  </footer>
+  <!-- Contenedor para insertar el footer dinámicamente -->
+  <div id="footer"></div>
+
+  <!-- Script para cargar footer.html -->
+  <script>
+    // Esta función "fetch" trae el contenido de footer.html
+    // y lo inyecta dentro del div con id="footer"
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('footer').innerHTML = data;
+      })
+      .catch(error => {
+        console.error('Error al cargar el footer:', error);
+      });
+  </script>
 
   <script src="js/albumes.js"></script>
   <script src="js/sellos.js"></script>
