--- a/mis_compras.html
+++ b/mis_compras.html
@@ -73,9 +73,22 @@
     <div id="orders-container"></div>
   </div>
 
-  <footer>
-    <p style="text-align: center;">&copy; 2025 UnderSounds. Todos los derechos reservados.</p>
-  </footer>
+  <!-- Contenedor para insertar el footer dinámicamente -->
+  <div id="footer"></div>
+
+  <!-- Script para cargar footer.html -->
+  <script>
+    // Esta función "fetch" trae el contenido de footer.html
+    // y lo inyecta dentro del div con id="footer"
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('footer').innerHTML = data;
+      })
+      .catch(error => {
+        console.error('Error al cargar el footer:', error);
+      });
+  </script>
 
   <script src="js/app.js"></script>
   <script>
