--- a/register.html
+++ b/register.html
@@ -92,10 +92,22 @@
   <!-- BOTÓN DE AYUDA: Botón flotante para acceder a la ayuda -->
   <a href="ayuda.html" class="help-button" title="Ayuda">?</a>
 
-  <!-- FOOTER: Pie de página -->
-  <footer>
-    <p>&copy; 2025 UnderSounds. Todos los derechos reservados.</p>
-  </footer>
+  <!-- Contenedor para insertar el footer dinámicamente -->
+  <div id="footer"></div>
+
+  <!-- Script para cargar footer.html -->
+  <script>
+    // Esta función "fetch" trae el contenido de footer.html
+    // y lo inyecta dentro del div con id="footer"
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('footer').innerHTML = data;
+      })
+      .catch(error => {
+        console.error('Error al cargar el footer:', error);
+      });
+  </script>
 
   <!-- Incluir jQuery para facilitar la manipulación del DOM y realizar peticiones AJAX -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
