Ultimos cambios realizados en la entrega 2

--- a/footer.html
+++ b/footer.html
@@ -17,7 +17,7 @@
       <!-- Redes sociales + Bandera juntas a la derecha -->
     <div class="footer-right">
         <div class="social-buttons">
-          <a href="https://www.instagram.com/viji" target="_blank" rel="noopener" aria-label="Instagram">
+          <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Instagram">
             <img src="assets/images/instagram.png" alt="Instagram" />
         </a>
         <a href="https://www.x.com" target="_blank" rel="noopener" aria-label="X">
