--- a/terminos.html
+++ b/terminos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Términos y Condiciones</title>
-  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="terms-page">
   <h1>Términos y Condiciones</h1>
